# ParallelZone

./: .buildinfo  CMakeLists.txt  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: c-cpp.yaml  deploy_docs.yaml  format.yaml  test_docs.yaml  test_docs_reuseable.yml
_sources/developer/design/: index.rst.txt
developer/: index.html
developer/design/: hashing.html  index.html  reflection.html  serialization.html
docs/: Makefile  README.md
docs/source/: conf.py  index.rst
docs/source/developer/: index.rst
docs/source/developer/design/: hashing.rst  reflection.rst  serialization.rst
include/parallelzone/: Runtime.hpp  archive_wrapper.hpp  hasher.hpp  parallelzone.hpp  serialization.hpp
parallelzone_cxx_api/: Runtime_8hpp_source.html  annotated.html  archive__wrapper_8hpp_source.html  classes.html  classparallelzone_1_1ArchiveWrapper-members.html  classparallelzone_1_1ArchiveWrapper.html  classparallelzone_1_1Runtime-members.html  classparallelzone_1_1Runtime.html  dir_6f322a68a0a7196d329000ebe92f89aa.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  hasher_8hpp.html  hasher_8hpp_source.html  index.html  parallelzone_8hpp.html  parallelzone_8hpp_source.html  serialization_8hpp_source.html
parallelzone_cxx_api/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  typedefs_0.js
src/parallelzone/: Runtime.cpp  placeholder.cpp
tests/: archive_wrapper.cpp  hasher.cpp  main.cpp  serialization.cpp
